tests/success/0001_cnst1.ec
cnst c1 : int list = [].
cnst c2 : _ = [<:int>].
cnst c3 : _ = [<:'a=int>]. 
