tests/fail/decl1.ec
op o ['a] : 'a -> bool.
op o : int -> int.